ajuste variables de ambiente
